--- a/tavern_sync.yaml
+++ b/tavern_sync.yaml
@@ -20,49 +20,49 @@ user名称: 凌
     #   - 想将世界书配置文件提取到本文件相同的文件夹中, 则填入 `./角色卡示例` 或 `角色卡示例`
     #   - 想将世界书配置文件提取到本文件所在文件夹的子文件夹"世界书"中, 则填入 `./世界书/角色卡示例` 或 `世界书/角色卡示例`
     #   - 想将世界书配置文件提取到本文件所在文件夹的父文件夹中, 则填入 `../角色卡示例`
-    本地文件路径: src/work/预设/自用/【MoM】自用预设
+    本地文件路径: work/预设/自用/【MoM】自用预设
 
     # 当使用打包功能 `node tavern_sync.mjs bundle 配置名称` 直接生成世界书/预设文件时, 要将它存放在哪个文件中
     # 你也可以直接删去下面一行不填, 则默认会导出到本地文件路径的同目录下
-    导出文件路径: src/work/导出
+    导出文件路径: work/导出
 
   第一张卡:
     类型: 世界书
     酒馆中的名称: 第一张卡
-    本地文件路径: src/work/第一张卡/世界书/index
+    本地文件路径: work/第一张卡/世界书/index
 
   陈思羽:
     类型: 世界书
     酒馆中的名称: 陈思羽
-    本地文件路径: src/work/角色卡/陈思羽/世界书/陈思羽.yaml
+    本地文件路径: work/角色卡/陈思羽/世界书/陈思羽.yaml
 
   部位特写:
     类型: 世界书
     酒馆中的名称: 部位特写
-    本地文件路径: src/work/世界书/部位特写/部位特写.yaml
+    本地文件路径: work/世界书/部位特写/部位特写.yaml
 
   抖M世界书:
     类型: 世界书
     酒馆中的名称: 抖M世界书
-    本地文件路径: src/work/世界书/抖M世界书/抖M世界书.yaml
+    本地文件路径: work/世界书/抖M世界书/抖M世界书.yaml
 
   气味描写（重口版）:
     类型: 世界书
     酒馆中的名称: 气味描写（重口版）
-    本地文件路径: src/work/世界书/气味描写（重口版）/气味描写（重口版）.yaml
+    本地文件路径: work/世界书/气味描写（重口版）/气味描写（重口版）.yaml
 
   丝袜世界书:
     类型: 世界书
     酒馆中的名称: 丝袜世界书
-    本地文件路径: src/work/世界书/丝袜世界书/丝袜世界书.yaml
+    本地文件路径: work/世界书/丝袜世界书/丝袜世界书.yaml
 
   贞操锁:
     类型: 世界书
     酒馆中的名称: 贞操锁
-    本地文件路径: src/work/世界书/贞操锁/贞操锁.yaml
+    本地文件路径: work/世界书/贞操锁/贞操锁.yaml
 
   陈蛮村:
     类型: 世界书
     酒馆中的名称: 陈蛮村男性视角
-    本地文件路径: src/work/角色卡/陈蛮村男性视角/世界书/陈蛮村男性视角.yaml
+    本地文件路径: work/角色卡/陈蛮村男性视角/世界书/陈蛮村男性视角.yaml
 
