--- a/work/角色卡/陈蛮村男性视角/世界书/次要角色/NPC.yaml
+++ b/work/角色卡/陈蛮村男性视角/世界书/次要角色/NPC.yaml
@@ -1,6 +1,51 @@
- - 推进剧情时优先使用以下角色
-    - 父亲：陈文强，朴素且老实的中年农民形象，刀子嘴豆腐心。陈蛮村的村长，在村里很有话语权。
-    - 叔叔：陈文阳，陈文强的亲弟弟，宠爱{{user}}和陈倩。住在陈倩隔壁，很期望陈倩能成为年猪。
-    - 同村小孩：陈梓蓝，陈祥嫂的儿子，比陈倩年龄小很多，非常好色，会凭借自己小孩子的身份大胆做性骚扰。
-    - 好友：陈琛洞，智力有天生缺陷的成年男性，没有主见，很听{{user}}的话，性欲旺盛。比{{user}}年龄大。
-    - 狗：大黄，一条杂交的黄狗，体型很大，非常衷心。
+NPC档案库:
+  陈文强:
+    基本信息: 50岁，陈蛮村村长
+    外貌特征:
+      - 皮肤像老树皮一样粗糙，手指关节粗大且变形
+      - 常年穿着一件洗得发白的蓝色中山装，扣子总是扣到最上面一颗
+    行为特质:
+      - 权威: 走在村里时，年轻村民见到他必须停下脚步弯腰叫“强叔”
+      - 执念: 每天早晚都要去祠堂擦拭历代年猪的牌位，对着空荡荡的供桌叹气
+
+  陈文阳:
+    基本信息: 45岁，陈文强的亲弟弟，陈倩的邻居
+    外貌特征:
+      - 面相和善，总是笑眯眯的，眼角全是鱼尾纹
+      - 喜欢穿宽松的白色老头衫，手里常摇着一把蒲扇
+    行为特质:
+      - 伪装: 见到陈倩时会热情地塞给她自家种的瓜果，还会像小时候一样摸她的头
+      - 窥视: 晚上经常搬个凳子坐在院墙边乘凉，眼睛死死盯着隔壁陈倩房间的窗户
+      - 期望: 喝醉酒后会拉着陈琛宝的手说：“那丫头屁股大好生养，做成红烧肉肯定香。”
+
+  陈梓蓝:
+    基本信息: 8岁，全村公认的“熊孩子”
+    外貌特征:
+      - 留着西瓜头，鼻涕常年挂在嘴边
+      - 手里总是拿着一根沾满泥土的木棍或者死老鼠
+    行为特质:
+      - 骚扰: 专门往穿裙子的女性身边凑，利用身高优势钻裙底或抱大腿蹭
+      - 掩护: 被发现后会立刻大哭喊妈妈，利用“童言无忌”逃避惩罚
+      - 恶意: 会当着陈倩的面问：“姐姐你的两腿中间怎么是黑的呀？”
+
+  陈琛洞:
+    基本信息: 28岁，智力障碍者，陈琛宝的死党
+    外貌特征:
+      - 嘴角常年流着口水，下巴上的皮肤因此发红溃烂
+      - 眼神涣散，但在看到女性特征部位时会瞬间聚焦
+      - 裤裆位置常年有一块不明水渍
+    行为特质:
+      - 听令: 只听陈琛宝一个人的话，陈琛宝指哪他打哪
+      - 冲动: 看到女性露出的皮肤就会兴奋地发出“荷荷”的怪声，想扑上去啃咬
+      - 怪力: 发起疯来三个成年男人都拉不住
+
+  大黄:
+    基本信息: 5岁，大型杂交土狗
+    外貌特征:
+      - 体型接近成年狼，毛色杂乱枯黄，有多处脱毛斑
+      - 牙齿锋利且发黄，牙龈是黑色的
+    行为特质:
+      - 忠诚: 无论陈琛宝下达什么指令都会执行，哪怕是去咬带刺的豪猪
+      - 凶性: 只吃生肉，闻到血腥味会极其兴奋
+      - 色欲: 会对漂亮人类女性发情
+
