--- a/work/预设/【MoM】自用预设/【MoM】自用预设.yaml
+++ b/work/预设/【MoM】自用预设/【MoM】自用预设.yaml
@@ -868,6 +868,59 @@
       最大深度: 10
 
   酒馆助手:
-    脚本库: []
+    脚本库:
+      - 名称: 自动更新
+        id: 736a4ad2-c3ec-4313-8638-499f3580e943
+        启用: true
+        类型: 脚本
+        内容: import
+          'https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/dist/酒馆助手/自动更新预设/index.js'
+        介绍: |
+          # 自动更新预设
+
+          - **作者:** 青空莉想做舞台少女的狗
+          - **版本:** 2025/02/11
+          - **源文件:** [点此跳转](https://github.com/StageDog/tavern_resource/tree/main/src)
+
+          在预设面板中加载你要自动更新的预设, 将这个脚本添加到酒馆助手 "预设脚本" 中, 编辑脚本, 在`变量列表`中填入预设名称、预设链接和更新日志链接.
+
+          例如:
+
+          ```yaml
+          {
+            预设名称: 自动更新预设示例
+            预设链接: https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/src/酒馆助手/自动更新预设/示例预设.json
+            更新日志链接: https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/src/酒馆助手/自动更新预设/示例更新日志.md
+          }
+          ```
+
+          其中, 预设链接和更新日志链接必须是固定的, 而且访问的是最新版本预设和更新日志文件.
+          比如, 你可以把预设和更新日志文件上传到 github, 然后使用 `https://testingcf.jsdelivr.net/gh/用户名/仓库名/文件路径` 作为预设链接和更新日志链接 (不清楚怎么做可以搜索一下或者问 AI).
+
+          而更新日志应该按下面这样填写:
+
+          ```md
+          # 更新日志
+
+          ## 这里填的会是预设版本号, 最上面一个版本是最新版本
+
+          - 最新版本更新了啥……
+
+          ## 新春版
+
+          - 这个版本更新了啥……
+
+          ## 1.0.0
+
+          - 这个版本更新了啥……
+          ```
+
+          这样一来, 只要你更新链接所访问到的预设和更新日志, 玩家就能在酒馆中直接更新预设, 不需要去帖子查看更新, 不需要再下载、导入新预设了!
+
+          另外, 你可以配合[实时编写角色卡、世界书或预设](https://stagedog.github.io/青空莉/工具经验/实时编写角色卡、世界书或预设/)来做到: 在 VSCode 中对预设进行一些修改, 上传到 github, 玩家在酒馆中自动收到更新.
+        数据:
+          预设名称: 未填写
+          预设链接: 未填写
+          更新日志链接: 未填写
 
     变量: {}
