--- a/work/角色卡/陈思羽/陈思羽.yaml
+++ b/work/角色卡/陈思羽/陈思羽.yaml
@@ -439,6 +439,70 @@
   正则: []
 
   酒馆助手:
-    脚本库: []
+    脚本库:
+      - 名称: 自动更新角色卡
+        id: 78fa48e6-ba39-403c-8c12-1a56e392e744
+        启用: true
+        类型: 脚本
+        内容: import
+          'https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/dist/酒馆助手/自动更新角色卡/index.js'
+        介绍: |
+          # 自动更新角色卡
+
+          - **作者:** 青空莉想做舞台少女的狗
+          - **版本:** 2025/02/11
+          - **源文件:** [点此跳转](https://github.com/StageDog/tavern_resource/tree/main/src)
+
+          在角色卡面板中加载你要自动更新的角色卡, 将这个脚本添加到酒馆助手 "角色脚本" 中, 编辑脚本, 在`变量列表`中填入角色卡名称、角色卡链接和更新日志链接.
+
+          例如:
+
+          ```yaml
+          {
+            角色卡名称: 自动更新角色卡示例
+            角色卡链接: https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/src/酒馆助手/自动更新角色卡/示例角色卡.png
+            更新日志链接: https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/src/酒馆助手/自动更新角色卡/示例更新日志.md
+          }
+          ```
+
+          其中,
+
+          - 角色卡名称要和角色卡在酒馆中的名称一样, 确定好后不能再更改
+          - 角色卡链接和更新日志链接必须是固定的, 而且访问的是最新版本角色卡和更新日志文件.
+
+          比如, 你可以把角色卡和更新日志文件上传到 github, 然后使用 `https://testingcf.jsdelivr.net/gh/用户名/仓库名/文件路径` 作为角色卡链接和更新日志链接 (不清楚怎么做可以搜索一下或者问 AI).
+
+          而更新日志应该按下面这样填写:
+
+          ```md
+          # 更新日志
+
+          ## 这里填的会是角色卡版本号, 最上面一个版本是最新版本
+
+          - 最新版本更新了啥……
+
+          ## 新春版
+
+          - 这个版本更新了啥……
+
+          ## 1.0.0
+
+          - 这个版本更新了啥……
+          ```
+
+          这样一来, 只要你更新链接所访问到的角色卡和更新日志, 玩家就能在酒馆中直接更新角色卡, 不需要去帖子查看更新, 不需要再下载、导入新角色卡了!
+
+          另外, 你可以配合[实时编写角色卡、世界书或角色卡](https://stagedog.github.io/青空莉/工具经验/实时编写角色卡、世界书或角色卡/)来做到: 在 VSCode 中对角色卡进行一些修改, 上传到 github, 玩家在酒馆中自动收到更新.
+        按钮:
+          启用: true
+          按钮列表:
+            - 名称: "更新角色卡: 自动更新角色卡示例这里填的会是角色卡版本号, 最上面一个版本是最新版本"
+              可见: true
+            - 名称: 更新日志
+              可见: true
+        数据:
+          角色卡名称: 自动更新角色卡示例
+          角色卡链接: https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/src/酒馆助手/自动更新角色卡/示例角色卡.png
+          更新日志链接: https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/src/酒馆助手/自动更新角色卡/示例更新日志.md
 
     变量: {}
