--- a/work/角色卡/陈蛮村/陈蛮村.yaml
+++ b/work/角色卡/陈蛮村/陈蛮村.yaml
@@ -26,6 +26,64 @@
       不可激活其他条目: false
     内容: ""
 
+  - 名称: "[initvar]变量初始化勿开"
+    启用: false
+    激活策略:
+      类型: 蓝灯
+    插入位置:
+      类型: 角色定义之前
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: true
+      不可激活其他条目: true
+    文件: 世界书\变量\[initvar]变量初始化勿开
+
+  - 名称: 变量列表
+    启用: true
+    激活策略:
+      类型: 蓝灯
+    插入位置:
+      类型: 指定深度
+      角色: 系统
+      深度: 0
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: true
+      不可激活其他条目: true
+    文件: 世界书\变量\变量列表
+
+  - 名称: "[mvu_update]变量更新规则"
+    启用: true
+    激活策略:
+      类型: 蓝灯
+    插入位置:
+      类型: 指定深度
+      角色: 系统
+      深度: 0
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: true
+      不可激活其他条目: true
+    文件: 世界书\变量\[mvu_update]变量更新规则
+
+  - 名称: "[mvu_update]变量输出格式"
+    启用: true
+    激活策略:
+      类型: 蓝灯
+    插入位置:
+      类型: 指定深度
+      角色: 系统
+      深度: 0
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: true
+      不可激活其他条目: true
+    文件: 世界书\变量\[mvu_update]变量输出格式
+
   - 名称: ===变量结束===
     启用: false
     激活策略:
@@ -51,6 +109,73 @@
       不可被其他条目激活: false
       不可激活其他条目: false
     内容: ""
+
+  - 名称: "[通用]好感度阶段"
+    启用: false
+    激活策略:
+      类型: 向量化
+    插入位置:
+      类型: 角色定义之前
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: false
+      不可激活其他条目: false
+    文件: 世界书\阶段\[通用]好感度阶段
+
+  - 名称: "[通用]堕落度阶段"
+    启用: false
+    激活策略:
+      类型: 向量化
+    插入位置:
+      类型: 角色定义之前
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: false
+      不可激活其他条目: false
+    文件: 世界书\阶段\[通用]堕落度阶段
+
+  - 名称: "[通用]性欲值阶段"
+    启用: false
+    激活策略:
+      类型: 向量化
+    插入位置:
+      类型: 角色定义之前
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: false
+      不可激活其他条目: false
+    文件: 世界书\阶段\[通用]性欲值阶段
+
+  - 名称: "[通用]NTR阶段"
+    启用: false
+    激活策略:
+      类型: 向量化
+    插入位置:
+      类型: 角色定义之前
+      顺序: 14720
+    激活概率: 100
+    递归:
+      不可被其他条目激活: false
+      不可激活其他条目: false
+    文件: 世界书\阶段\[通用]NTR阶段
+
+  - 名称: 角色变量入口
+    启用: true
+    激活策略:
+      类型: 蓝灯
+    插入位置:
+      类型: 指定深度
+      角色: 系统
+      深度: 0
+      顺序: 100
+    激活概率: 100
+    递归:
+      不可被其他条目激活: true
+      不可激活其他条目: true
+    文件: 世界书\阶段\角色变量入口
 
   - 名称: ===阶段结束===
     启用: false
@@ -89,7 +214,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\陈琛宝
+    文件: 世界书\主要角色\陈琛宝
 
   - 名称: 陈倩
     启用: true
@@ -102,7 +227,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\陈倩
+    文件: 世界书\主要角色\陈倩
 
   - 名称: ===主要角色结束===
     启用: false
@@ -141,7 +266,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\NPC
+    文件: 世界书\次要角色\NPC
 
   - 名称: 候琳琳
     启用: true
@@ -154,7 +279,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\候琳琳
+    文件: 世界书\次要角色\候琳琳
 
   - 名称: 江雪晴
     启用: true
@@ -167,7 +292,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\江雪晴
+    文件: 世界书\次要角色\江雪晴
 
   - 名称: ===次要角色结束===
     启用: false
@@ -206,7 +331,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\陈蛮村
+    文件: 世界书\地点\陈蛮村
 
   - 名称: 祠堂
     启用: true
@@ -219,7 +344,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\祠堂
+    文件: 世界书\地点\祠堂
 
   - 名称: ===地点结束===
     启用: false
@@ -258,7 +383,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\年猪
+    文件: 世界书\其他\年猪
 
   - 名称: 年货
     启用: true
@@ -271,7 +396,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\年货
+    文件: 世界书\其他\年货
 
   - 名称: 贡女
     启用: true
@@ -284,7 +409,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\贡女
+    文件: 世界书\其他\贡女
 
   - 名称: 描写指导
     启用: true
@@ -297,7 +422,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\描写指导
+    文件: 世界书\其他\描写指导
 
   - 名称: 仪式汇演
     启用: true
@@ -310,7 +435,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    文件: 世界书\仪式汇演
+    文件: 世界书\其他\仪式汇演
 
   - 名称: ===其他结束===
     启用: false
@@ -326,7 +451,80 @@
     内容: ""
 
 扩展字段:
-  正则: []
+  正则:
+    - 正则名称: 状态栏
+      id: 4aab3972-2f6c-429d-a9aa-ac894180004e
+      启用: true
+      查找表达式: <StatusPlaceHolderImpl/>
+      文件: 正则\状态栏
+      来源:
+        用户输入: false
+        AI输出: true
+      作用于:
+        仅格式显示: true
+        仅格式提示词: false
+      最大深度: 2
+
+    - 正则名称: 只发送最新3楼的变量更新
+      id: 1ed1ea7d-58e1-4bc9-88b3-1567804fd166
+      启用: true
+      查找表达式: /<UpdateVariable>[\s\S]*?</UpdateVariable>/gm
+      内容: ""
+      来源:
+        用户输入: false
+        AI输出: true
+      作用于:
+        仅格式显示: false
+        仅格式提示词: true
+      最小深度: 6
+
+    - 正则名称: 仅格式思维链
+      id: 808c650b-5706-49de-a335-d121a37c85fe
+      启用: true
+      查找表达式: /<Analysis>[\s\S]+?<\/Analysis>/gm
+      内容: ""
+      来源:
+        用户输入: false
+        AI输出: true
+      作用于:
+        仅格式显示: false
+        仅格式提示词: true
+
+    - 正则名称: 对 AI 隐藏状态栏
+      id: 1bd9e78f-7653-422c-8fd5-b783d3f0a5d0
+      启用: true
+      查找表达式: <StatusPlaceHolderImpl/>
+      内容: ""
+      来源:
+        用户输入: false
+        AI输出: true
+      作用于:
+        仅格式显示: false
+        仅格式提示词: true
+
+    - 正则名称: "[美化]完整变量完成-夜空诗意"
+      id: 87b7c1e8-f19b-4b10-a183-b8781c69b024
+      启用: true
+      查找表达式: /<UpdateVariable(?:variable)?>\s*(.*)\s*<\/UpdateVariable(?:variable)?>/gsi
+      文件: 正则\[美化]完整变量完成-夜空诗意
+      来源:
+        用户输入: false
+        AI输出: true
+      作用于:
+        仅格式显示: true
+        仅格式提示词: false
+
+    - 正则名称: "[美化]变量更新中-夜空诗意"
+      id: 614f49d0-8136-4fce-9c04-06465ceab036
+      启用: true
+      查找表达式: /<UpdateVariable(?:variable)?>(?!.*<\/UpdateVariable(?:variable)?>)\s*(.*)\s*$/gsi
+      文件: 正则\[美化]变量更新中-夜空诗意
+      来源:
+        用户输入: false
+        AI输出: true
+      作用于:
+        仅格式显示: true
+        仅格式提示词: false
 
   酒馆助手:
     脚本库:
@@ -383,9 +581,180 @@
           这样一来, 只要你更新链接所访问到的角色卡和更新日志, 玩家就能在酒馆中直接更新角色卡, 不需要去帖子查看更新, 不需要再下载、导入新角色卡了!
 
           另外, 你可以配合[实时编写角色卡、世界书或角色卡](https://stagedog.github.io/青空莉/工具经验/实时编写角色卡、世界书或角色卡/)来做到: 在 VSCode 中对角色卡进行一些修改, 上传到 github, 玩家在酒馆中自动收到更新.
+        按钮:
+          启用: true
+          按钮列表:
+            - 名称: "更新角色卡: 陈蛮村更新内容"
+              可见: true
+            - 名称: 更新日志
+              可见: true
         数据:
           角色卡名称: 陈蛮村
           角色卡链接: https://raw.githubusercontent.com/zcjbahk-fate/silly_ant/refs/heads/main/resource/角色卡/陈蛮村/陈蛮村.png
           更新日志链接: https://raw.githubusercontent.com/zcjbahk-fate/silly_ant/refs/heads/main/resource/角色卡/陈蛮村/更新日志.md
 
+      - 名称: mvu
+        id: b0bfd78a-5233-45d3-93d1-cca237bc0ab7
+        启用: true
+        类型: 脚本
+        内容: |
+          import 'https://testingcf.jsdelivr.net/gh/MagicalAstrogy/MagVarUpdate/artifact/bundle.js';
+        按钮:
+          启用: true
+          按钮列表:
+            - 名称: 重新处理变量
+              可见: false
+            - 名称: 重新读取初始变量
+              可见: false
+            - 名称: 快照楼层
+              可见: false
+            - 名称: 重演楼层
+              可见: false
+            - 名称: 重试额外模型解析
+              可见: false
+            - 名称: 清除旧楼层变量
+              可见: false
+
+      - 名称: zod
+        id: 70edd0c0-5425-49bf-b210-a095e8a29d7c
+        启用: true
+        类型: 脚本
+        内容: |
+          import { registerMvuSchema } from "https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/dist/util/mvu_zod.js";
+
+          // --- 辅助 Schema 定义 ---
+
+          // 1. 性经历通用逻辑（自动求和）
+          const SexExpSchema = z
+            .object({
+              口交: z.coerce.number().int().nonnegative().prefault(0),
+              足交: z.coerce.number().int().nonnegative().prefault(0),
+              插入: z.coerce.number().int().nonnegative().prefault(0),
+              肛交: z.coerce.number().int().nonnegative().prefault(0),
+              手交: z.coerce.number().int().nonnegative().prefault(0),
+            })
+            .transform((data) => {
+              const total = data.口交 + data.足交 + data.插入 + data.肛交 + data.手交;
+              return { ...data, 总数: total };
+            });
+
+          // 2. 肉棒状态逻辑
+          const PenisSchema = z
+            .object({
+              当前长度: z.coerce.number().describe("单位cm，自动修正").prefault(5),
+              长度范围: z.object({
+                最小: z.coerce.number().int().prefault(5),
+                最大: z.coerce.number().int().prefault(18),
+              }),
+              状态: z.string().prefault("未勃起"),
+              描述: z.string().prefault("在内裤中蜷缩，包皮覆盖龟头"),
+            })
+            .transform((data) => {
+              data.当前长度 = _.clamp(
+                data.当前长度,
+                data.长度范围.最小,
+                data.长度范围.最大
+              );
+              return data;
+            });
+
+          // --- 主结构定义 ---
+          export const Schema = z.object({
+            系统: z.object({
+              距离除夕还剩天数: z.coerce.number().transform((v) => _.clamp(v, 0, 7)).prefault(7),
+            })
+            // 主角变量
+            主角: z.object({
+              年龄: z.coerce.number().int().prefault(24),
+
+              性器状态: z.object({
+                肉棒: PenisSchema,
+              }),
+
+              性经历: z.record(z.string().describe("女性角色名"), SexExpSchema).prefault({
+                顾盼兮: {},
+              }),
+            }),
+
+            // NPC变量
+            角色: z
+              .record(
+                z.string().describe("角色名"),
+                z.object({
+                  年龄: z.coerce.number().int().prefault(24),
+
+                  // 基础数值
+                  好感度: z.coerce
+                    .number()
+                    .transform((v) => _.clamp(v, 0, 100))
+                    .prefault(5),
+                  堕落度: z.coerce
+                    .number()
+                    .transform((v) => _.clamp(v, 0, 100))
+                    .prefault(5),
+                  性欲值: z.coerce
+                    .number()
+                    .transform((v) => _.clamp(v, 0, 100))
+                    .prefault(5),
+
+                  // --- 支持多个 NTR 关系 ---
+                  NTR关系: z.object({
+                    苦主姓名: z.string().prefault("托"),
+
+                    出轨记录: z
+                      .record(
+                        z.string().describe("黄毛名字"),
+                        z.object({
+                          NTR: z.coerce
+                            .number()
+                            .transform((v) => _.clamp(v, 0, 100))
+                            .prefault(0),
+                        })
+                      )
+                      .prefault({
+                        王总: {
+                          NTR: 10,
+                        },
+                      }),
+                  }),
+
+                  当前姿势: z.string().prefault("站立，身体微倾"),
+
+                  体内精液: z
+                    .record(
+                      z.string().describe("来源人名"),
+                      z.object({
+                        量: z.coerce.number().nonnegative().prefault(0),
+                        状态: z.string().prefault("子宫深处 / 缓慢滴落 / 浓稠乳白色"),
+                      })
+                    )
+                    .prefault({
+                      王总: { 量: 10, 状态: "子宫深处 / 缓慢滴落 / 浓稠乳白色" },
+                    }),
+
+                  上次做爱: z.object({
+                    时间: z.string().prefault("未知"),
+                    对象: z.string().prefault("无"),
+                    地点: z.string().prefault("未知"),
+                    方式: z.string().prefault("未知"),
+                  }),
+
+                  性经历: z.record(z.string().describe("对象名"), SexExpSchema).prefault({
+                    王总: { 口交: 1, 足交: 0, 插入: 1, 肛交: 0, 手交: 0 },
+                    前任: { 口交: 2, 足交: 0, 插入: 3, 肛交: 0, 手交: 0 },
+                  }),
+
+                  内心想法: z.string().prefault("..."),
+                  对主角看法: z.string().prefault("..."),
+
+                  // --- 新增：是否知晓村中习俗 ---
+                  是否知晓村中习俗: z.enum(["已知", "未知"]).prefault("未知"),
+                })
+              )
+              .prefault({}),
+          });
+
+          $(() => {
+            registerMvuSchema(Schema);
+          });
     变量: {}
