--- a/work/角色卡/陈思羽/世界书/[initvar]变量初始化勿开.yaml
+++ b/work/角色卡/陈思羽/世界书/[initvar]变量初始化勿开.yaml
@@ -28,8 +28,8 @@
     性欲值: 20
 
     NTR关系:
-      苦主姓名: {{user}}
-      出轨记录:
+      苦主姓名: { { user } }
+      出轨对象:
 
     当前姿势: 优雅地坐在咖啡厅沙发上，保持着看似完美的微笑
 
