--- a/work/角色卡/陈思羽/世界书/[mvu_update]变量更新规则.yaml
+++ b/work/角色卡/陈思羽/世界书/[mvu_update]变量更新规则.yaml
@@ -25,7 +25,7 @@
         - 堕落度：接受出轨、性暗示、粗口或羞辱行为后增加
         - 性欲值：受到挑逗、接触或看到色情场景时增加，高潮后暂时降低
 
-    NTR关系.出轨记录.${黄毛}:
+    NTR关系.出轨对象.${黄毛}:
       type: |-
         {
           NTR: number; // 出轨程度 0-100
