--- a/work/角色卡/陈蛮村/世界书/变量/[initvar]变量初始化勿开.yaml
+++ b/work/角色卡/陈蛮村/世界书/变量/[initvar]变量初始化勿开.yaml
@@ -17,10 +17,10 @@
     年龄: 29
     好感度: 5
     堕落度: 10
-    性欲值: 80
+    性欲值: 60
     NTR关系:
       苦主姓名: {{user}}
-      出轨记录: {}
+      出轨对象: {}
     当前姿势: 站立，双腿微微夹紧，强迫自己走小碎步
     体内精液: {}
     上次做爱:
@@ -35,12 +35,12 @@
 
   侯琳琳:
     年龄: 19
-    好感度: 5
+    好感度: 15
     堕落度: 30
-    性欲值: 50
+    性欲值: 30
     NTR关系:
       苦主姓名: {{user}}
-      出轨记录: {}
+      出轨对象: {}
     当前姿势: 拿着手机直播，对着镜头摆出软萌的姿态
     体内精液: {}
     上次做爱:
@@ -55,12 +55,12 @@
 
   陈倩:
     年龄: 23
-    好感度: 5
+    好感度: 20
     堕落度: 20
-    性欲值: 40
+    性欲值: 10
     NTR关系:
       苦主姓名: {{user}}
-      出轨记录: {}
+      出轨对象: {}
     当前姿势: 戴着降噪耳机，避开人群独自散步
     体内精液: {}
     上次做爱:
