--- a/work/角色卡/陈蛮村/陈蛮村.yaml
+++ b/work/角色卡/陈蛮村/陈蛮村.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://testingcf.jsdelivr.net/gh/StageDog/tavern_sync/dist/schema/character.zh.json
 头像: 头像
-版本: "1.7"
+版本: '1.7'
 作者: 美羽
 备注: 本卡免费发布，支持二创，禁止转载至付费酒馆。
 
@@ -24,9 +24,9 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
-  - 名称: "[initvar]变量初始化勿开"
+  - 名称: '[initvar]变量初始化勿开'
     启用: false
     激活策略:
       类型: 蓝灯
@@ -54,7 +54,7 @@
       不可激活其他条目: true
     文件: 世界书\变量\变量列表
 
-  - 名称: "[mvu_update]变量更新规则"
+  - 名称: '[mvu_update]变量更新规则'
     启用: true
     激活策略:
       类型: 蓝灯
@@ -69,7 +69,7 @@
       不可激活其他条目: true
     文件: 世界书\变量\[mvu_update]变量更新规则
 
-  - 名称: "[mvu_update]变量输出格式"
+  - 名称: '[mvu_update]变量输出格式'
     启用: true
     激活策略:
       类型: 蓝灯
@@ -95,7 +95,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: ===阶段开始===
     启用: false
@@ -108,9 +108,9 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
-  - 名称: "[通用]好感度阶段"
+  - 名称: '[通用]好感度阶段'
     启用: false
     激活策略:
       类型: 向量化
@@ -123,7 +123,7 @@
       不可激活其他条目: false
     文件: 世界书\阶段\[通用]好感度阶段
 
-  - 名称: "[通用]堕落度阶段"
+  - 名称: '[通用]堕落度阶段'
     启用: false
     激活策略:
       类型: 向量化
@@ -136,7 +136,7 @@
       不可激活其他条目: false
     文件: 世界书\阶段\[通用]堕落度阶段
 
-  - 名称: "[通用]性欲值阶段"
+  - 名称: '[通用]性欲值阶段'
     启用: false
     激活策略:
       类型: 向量化
@@ -149,7 +149,7 @@
       不可激活其他条目: false
     文件: 世界书\阶段\[通用]性欲值阶段
 
-  - 名称: "[通用]NTR阶段"
+  - 名称: '[通用]NTR阶段'
     启用: false
     激活策略:
       类型: 向量化
@@ -188,7 +188,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: ===主要角色开始===
     启用: false
@@ -201,7 +201,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: 陈琛宝
     启用: true
@@ -240,7 +240,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: ===次要角色开始===
     启用: false
@@ -253,7 +253,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: NPC
     启用: true
@@ -305,7 +305,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: ===地点开始===
     启用: false
@@ -318,7 +318,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: 陈蛮村
     启用: true
@@ -357,7 +357,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: ===其他开始===
     启用: false
@@ -370,7 +370,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
   - 名称: 年猪
     启用: true
@@ -448,7 +448,7 @@
     递归:
       不可被其他条目激活: false
       不可激活其他条目: false
-    内容: ""
+    内容: ''
 
 扩展字段:
   正则:
@@ -469,7 +469,7 @@
       id: 1ed1ea7d-58e1-4bc9-88b3-1567804fd166
       启用: true
       查找表达式: /<UpdateVariable>[\s\S]*?</UpdateVariable>/gm
-      内容: ""
+      内容: ''
       来源:
         用户输入: false
         AI输出: true
@@ -482,7 +482,7 @@
       id: 808c650b-5706-49de-a335-d121a37c85fe
       启用: true
       查找表达式: /<Analysis>[\s\S]+?<\/Analysis>/gm
-      内容: ""
+      内容: ''
       来源:
         用户输入: false
         AI输出: true
@@ -494,7 +494,7 @@
       id: 1bd9e78f-7653-422c-8fd5-b783d3f0a5d0
       启用: true
       查找表达式: <StatusPlaceHolderImpl/>
-      内容: ""
+      内容: ''
       来源:
         用户输入: false
         AI输出: true
@@ -502,7 +502,7 @@
         仅格式显示: false
         仅格式提示词: true
 
-    - 正则名称: "[美化]完整变量完成-夜空诗意"
+    - 正则名称: '[美化]完整变量完成-夜空诗意'
       id: 87b7c1e8-f19b-4b10-a183-b8781c69b024
       启用: true
       查找表达式: /<UpdateVariable(?:variable)?>\s*(.*)\s*<\/UpdateVariable(?:variable)?>/gsi
@@ -514,7 +514,7 @@
         仅格式显示: true
         仅格式提示词: false
 
-    - 正则名称: "[美化]变量更新中-夜空诗意"
+    - 正则名称: '[美化]变量更新中-夜空诗意'
       id: 614f49d0-8136-4fce-9c04-06465ceab036
       启用: true
       查找表达式: /<UpdateVariable(?:variable)?>(?!.*<\/UpdateVariable(?:variable)?>)\s*(.*)\s*$/gsi
@@ -584,7 +584,7 @@
         按钮:
           启用: true
           按钮列表:
-            - 名称: "更新角色卡: 陈蛮村更新内容"
+            - 名称: '更新角色卡: 陈蛮村更新内容'
               可见: true
             - 名称: 更新日志
               可见: true
@@ -622,58 +622,57 @@
         内容: |
           import { registerMvuSchema } from "https://testingcf.jsdelivr.net/gh/StageDog/tavern_resource/dist/util/mvu_zod.js";
 
-          // --- 辅助 Schema 定义 ---
-
-          // 1. 性经历通用逻辑（自动求和）
+          // 1. 性经历通用逻辑（自动计算总数）
           const SexExpSchema = z
             .object({
-              口交: z.coerce.number().int().nonnegative().prefault(0),
-              足交: z.coerce.number().int().nonnegative().prefault(0),
-              插入: z.coerce.number().int().nonnegative().prefault(0),
-              肛交: z.coerce.number().int().nonnegative().prefault(0),
-              手交: z.coerce.number().int().nonnegative().prefault(0),
+              口交: z.coerce.number().int().prefault(0),
+              足交: z.coerce.number().int().prefault(0),
+              插入: z.coerce.number().int().prefault(0),
+              肛交: z.coerce.number().int().prefault(0),
+              手交: z.coerce.number().int().prefault(0),
             })
             .transform((data) => {
+              // 强制修正负数
+              data.口交 = Math.max(0, data.口交);
+              data.足交 = Math.max(0, data.足交);
+              data.插入 = Math.max(0, data.插入);
+              data.肛交 = Math.max(0, data.肛交);
+              data.手交 = Math.max(0, data.手交);
               const total = data.口交 + data.足交 + data.插入 + data.肛交 + data.手交;
               return { ...data, 总数: total };
             });
 
-          // 2. 肉棒状态逻辑
-          const PenisSchema = z
-            .object({
-              当前长度: z.coerce.number().describe("单位cm，自动修正").prefault(5),
-              长度范围: z.object({
-                最小: z.coerce.number().int().prefault(5),
-                最大: z.coerce.number().int().prefault(18),
-              }),
-              状态: z.string().prefault("未勃起"),
-              描述: z.string().prefault("在内裤中蜷缩，包皮覆盖龟头"),
-            })
-            .transform((data) => {
-              data.当前长度 = _.clamp(
-                data.当前长度,
-                data.长度范围.最小,
-                data.长度范围.最大
-              );
-              return data;
-            });
+          // 2. 苦主的绿帽档案逻辑
+          const NtrRecordSchema = z.object({
+            NTR: z.coerce.number().prefault(0),
+          }).transform(data => {
+            data.NTR = _.clamp(data.NTR, 0, 100);
+            return data;
+          });
 
           // --- 主结构定义 ---
           export const Schema = z.object({
             系统: z.object({
-              距离除夕还剩天数: z.coerce.number().transform((v) => _.clamp(v, 0, 7)).prefault(7),
-            })
+              距离除夕还剩天数: z.coerce.number().prefault(7),
+            }).transform(data => {
+              data.距离除夕还剩天数 = _.clamp(data.距离除夕还剩天数, 0, 7);
+              return data;
+            }),
+
             // 主角变量
             主角: z.object({
               年龄: z.coerce.number().int().prefault(24),
 
               性器状态: z.object({
-                肉棒: PenisSchema,
+                肉棒: z.object({
+                  当前长度: z.coerce.number().prefault(0),
+                  状态: z.string().prefault("未勃起"),
+                  描述: z.string().prefault("无"),
+                }),
               }),
 
-              性经历: z.record(z.string().describe("女性角色名"), SexExpSchema).prefault({
-                顾盼兮: {},
-              }),
+              // 主角的配种记录
+              性经历: z.record(z.string().describe("女性角色名"), SexExpSchema).prefault({}),
             }),
 
             // NPC变量
@@ -682,73 +681,54 @@
                 z.string().describe("角色名"),
                 z.object({
                   年龄: z.coerce.number().int().prefault(24),
+                  是否知晓村中习俗: z.string().prefault("未知"),
 
-                  // 基础数值
-                  好感度: z.coerce
-                    .number()
-                    .transform((v) => _.clamp(v, 0, 100))
-                    .prefault(5),
-                  堕落度: z.coerce
-                    .number()
-                    .transform((v) => _.clamp(v, 0, 100))
-                    .prefault(5),
-                  性欲值: z.coerce
-                    .number()
-                    .transform((v) => _.clamp(v, 0, 100))
-                    .prefault(5),
+                  // 这里只做基础定义，去掉单点的 transform
+                  好感度: z.coerce.number().prefault(0),
+                  堕落度: z.coerce.number().prefault(0),
+                  性欲值: z.coerce.number().prefault(0),
 
-                  // --- 支持多个 NTR 关系 ---
                   NTR关系: z.object({
-                    苦主姓名: z.string().prefault("托"),
-
-                    出轨记录: z
-                      .record(
-                        z.string().describe("黄毛名字"),
-                        z.object({
-                          NTR: z.coerce
-                            .number()
-                            .transform((v) => _.clamp(v, 0, 100))
-                            .prefault(0),
-                        })
-                      )
-                      .prefault({
-                        王总: {
-                          NTR: 10,
-                        },
-                      }),
+                    苦主姓名: z.string().prefault("无"),
+                    出轨对象: z.record(z.string().describe("黄毛名字"), NtrRecordSchema).prefault({}),
                   }),
 
-                  当前姿势: z.string().prefault("站立，身体微倾"),
+                  当前姿势: z.string().prefault("站立"),
+                  内心想法: z.string().prefault("无"),
+                  对主角看法: z.string().prefault("无"),
 
                   体内精液: z
                     .record(
                       z.string().describe("来源人名"),
                       z.object({
-                        量: z.coerce.number().nonnegative().prefault(0),
-                        状态: z.string().prefault("子宫深处 / 缓慢滴落 / 浓稠乳白色"),
+                        量: z.coerce.number().prefault(0),
+                        状态: z.string().prefault("干净"),
                       })
                     )
-                    .prefault({
-                      王总: { 量: 10, 状态: "子宫深处 / 缓慢滴落 / 浓稠乳白色" },
-                    }),
+                    .prefault({}),
 
                   上次做爱: z.object({
-                    时间: z.string().prefault("未知"),
+                    时间: z.string().prefault("无"),
                     对象: z.string().prefault("无"),
-                    地点: z.string().prefault("未知"),
-                    方式: z.string().prefault("未知"),
+                    地点: z.string().prefault("无"),
+                    方式: z.string().prefault("无"),
                   }),
 
-                  性经历: z.record(z.string().describe("对象名"), SexExpSchema).prefault({
-                    王总: { 口交: 1, 足交: 0, 插入: 1, 肛交: 0, 手交: 0 },
-                    前任: { 口交: 2, 足交: 0, 插入: 3, 肛交: 0, 手交: 0 },
-                  }),
+                  性经历: z.record(z.string().describe("对象名"), SexExpSchema).prefault({}),
+                })
+                // 【重点】在这里对整个角色对象进行拦截修正
+                .transform(data => {
+                  data.好感度 = _.clamp(data.好感度, 0, 100);
+                  data.堕落度 = _.clamp(data.堕落度, 0, 100);
+                  data.性欲值 = _.clamp(data.性欲值, 0, 100);
 
-                  内心想法: z.string().prefault("..."),
-                  对主角看法: z.string().prefault("..."),
-
-                  // --- 新增：是否知晓村中习俗 ---
-                  是否知晓村中习俗: z.enum(["已知", "未知"]).prefault("未知"),
+                  // 顺便把精液量也做个负数拦截，以防万一
+                  if (data.体内精液) {
+                    Object.values(data.体内精液).forEach(semen => {
+                      semen.量 = Math.max(0, semen.量);
+                    });
+                  }
+                  return data;
                 })
               )
               .prefault({}),
@@ -757,4 +737,5 @@
           $(() => {
             registerMvuSchema(Schema);
           });
+
     变量: {}
