更新变量结构

--- a/work/角色卡/陈蛮村/陈蛮村.yaml
+++ b/work/角色卡/陈蛮村/陈蛮村.yaml
@@ -162,7 +162,7 @@
       不可激活其他条目: false
     文件: 世界书\阶段\[通用]NTR阶段
 
-  - 名称: 角色变量入口
+  - 名称: 陈倩_数值系统入口
     启用: true
     激活策略:
       类型: 蓝灯
@@ -175,7 +175,37 @@
     递归:
       不可被其他条目激活: true
       不可激活其他条目: true
-    文件: 世界书\阶段\角色变量入口
+    文件: 世界书\阶段\陈倩_数值系统入口
+
+  - 名称: 侯琳琳_数值系统入口
+    启用: true
+    激活策略:
+      类型: 蓝灯
+    插入位置:
+      类型: 指定深度
+      角色: 系统
+      深度: 0
+      顺序: 100
+    激活概率: 100
+    递归:
+      不可被其他条目激活: true
+      不可激活其他条目: true
+    文件: 世界书\阶段\侯琳琳_数值系统入口
+
+  - 名称: 江雪晴_数值系统入口
+    启用: true
+    激活策略:
+      类型: 蓝灯
+    插入位置:
+      类型: 指定深度
+      角色: 系统
+      深度: 0
+      顺序: 100
+    激活概率: 100
+    递归:
+      不可被其他条目激活: true
+      不可激活其他条目: true
+    文件: 世界书\阶段\江雪晴_数值系统入口
 
   - 名称: ===阶段结束===
     启用: false
