--- a/work/角色卡/陈蛮村/陈蛮村.yaml
+++ b/work/角色卡/陈蛮村/陈蛮村.yaml
@@ -165,7 +165,9 @@
   - 名称: 陈倩_数值系统入口
     启用: true
     激活策略:
-      类型: 蓝灯
+      类型: 绿灯
+      关键字:
+        - 陈倩
     插入位置:
       类型: 指定深度
       角色: 系统
@@ -180,7 +182,9 @@
   - 名称: 侯琳琳_数值系统入口
     启用: true
     激活策略:
-      类型: 蓝灯
+      类型: 绿灯
+      关键字:
+        - 侯琳琳
     插入位置:
       类型: 指定深度
       角色: 系统
@@ -195,7 +199,9 @@
   - 名称: 江雪晴_数值系统入口
     启用: true
     激活策略:
-      类型: 蓝灯
+      类型: 绿灯
+      关键字:
+        - 江雪晴
     插入位置:
       类型: 指定深度
       角色: 系统
